--- a/TwitterDemo/Base.lproj/Main.storyboard
+++ b/TwitterDemo/Base.lproj/Main.storyboard
@@ -171,6 +171,7 @@
                                             <outlet property="timeLabel" destination="rOj-Ov-FXt" id="S1h-As-d7r"/>
                                             <outlet property="tweetScreenNameLabel" destination="LWy-g0-f1D" id="FU7-2M-2Es"/>
                                             <outlet property="tweetUserNameLabel" destination="Sug-oH-G0Q" id="N1l-oj-e64"/>
+                                            <segue destination="55n-6a-cLM" kind="show" identifier="viewTweet" id="3RY-42-mP3"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -185,9 +186,14 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Rrb-bc-kDN">
-                        <barButtonItem key="leftBarButtonItem" title="log out" id="gvK-9c-xmg">
+                        <barButtonItem key="leftBarButtonItem" title="Log out" id="gvK-9c-xmg">
                             <connections>
                                 <action selector="onlogOut:" destination="B9s-FO-D1N" id="ieI-j1-Cyi"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" title="New" id="WlS-Y2-B91">
+                            <connections>
+                                <segue destination="Ndd-kX-yls" kind="push" id="sW3-SE-9EC"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -198,6 +204,101 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PGo-td-CIr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1808.8" y="36.431784107946029"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="qYY-HJ-9Qr">
+            <objects>
+                <viewController id="Ndd-kX-yls" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Iy8-c6-sZt"/>
+                        <viewControllerLayoutGuide type="bottom" id="I4R-aG-vJa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RQh-Y5-vuL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Suv-qr-RRg">
+                                <rect key="frame" x="16" y="89" width="64" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="HXl-2c-XAl"/>
+                                    <constraint firstAttribute="width" constant="64" id="oTY-19-9oQ"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Kathy Yin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BOR-Y0-T8c">
+                                <rect key="frame" x="95" y="89" width="272" height="20"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="@kathyyin" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Vx-UO-S3Q">
+                                <rect key="frame" x="95" y="117" width="272" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="qL4-fq-KgH">
+                                <rect key="frame" x="16" y="143" width="343" height="519"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Suv-qr-RRg" firstAttribute="top" secondItem="Iy8-c6-sZt" secondAttribute="bottom" constant="25" id="4CR-Vs-uhT"/>
+                            <constraint firstItem="qL4-fq-KgH" firstAttribute="top" secondItem="0Vx-UO-S3Q" secondAttribute="bottom" constant="5" id="5UZ-Ny-CSR"/>
+                            <constraint firstAttribute="trailing" secondItem="qL4-fq-KgH" secondAttribute="trailing" constant="16" id="B87-qF-2nQ"/>
+                            <constraint firstItem="0Vx-UO-S3Q" firstAttribute="top" secondItem="BOR-Y0-T8c" secondAttribute="bottom" constant="8" id="DCK-dk-r0w"/>
+                            <constraint firstItem="BOR-Y0-T8c" firstAttribute="top" secondItem="Iy8-c6-sZt" secondAttribute="bottom" constant="25" id="JqE-ke-Q05"/>
+                            <constraint firstItem="BOR-Y0-T8c" firstAttribute="leading" secondItem="Suv-qr-RRg" secondAttribute="trailing" constant="15" id="VDb-5u-47t"/>
+                            <constraint firstItem="I4R-aG-vJa" firstAttribute="top" secondItem="qL4-fq-KgH" secondAttribute="bottom" constant="5" id="Y3d-Cy-dqu"/>
+                            <constraint firstItem="0Vx-UO-S3Q" firstAttribute="leading" secondItem="BOR-Y0-T8c" secondAttribute="leading" id="YeG-ze-6pJ"/>
+                            <constraint firstItem="Suv-qr-RRg" firstAttribute="leading" secondItem="RQh-Y5-vuL" secondAttribute="leading" constant="16" id="gvi-P7-IHK"/>
+                            <constraint firstItem="0Vx-UO-S3Q" firstAttribute="leading" secondItem="Suv-qr-RRg" secondAttribute="trailing" constant="15" id="h6r-Px-DJA"/>
+                            <constraint firstItem="qL4-fq-KgH" firstAttribute="leading" secondItem="RQh-Y5-vuL" secondAttribute="leading" constant="16" id="ne8-80-2pZ"/>
+                            <constraint firstAttribute="trailing" secondItem="BOR-Y0-T8c" secondAttribute="trailing" constant="8" id="wC3-wY-Wwa"/>
+                            <constraint firstAttribute="trailing" secondItem="0Vx-UO-S3Q" secondAttribute="trailing" constant="8" id="xKJ-da-lNe"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="eQ7-Rt-Y2p">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="tCJ-qW-GZF">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="XHQ-O1-Gcs">
+                                <rect key="frame" x="16" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Cancel"/>
+                            </button>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" style="plain" id="5ue-CE-ml3">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Hug-KO-TUK">
+                                <rect key="frame" x="276" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Tweet"/>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FbG-wY-WzC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2912.8000000000002" y="-350.37481259370315"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mx1-ec-aeI">
+            <objects>
+                <viewController id="55n-6a-cLM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="s9c-TB-txk"/>
+                        <viewControllerLayoutGuide type="bottom" id="rUX-Mr-x6u"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="RT4-pz-nIw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aVB-R0-6Vs" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2913" y="458"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="XLL-mh-CIg">
